--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -66,6 +66,15 @@ services:
       interval: 5s
       timeout: 2s
       retries: 100
+  frontend:
+    build:
+      context: ./blog-front
+    ports:
+      - "80:80"
+    depends_on:
+      - blogauth
+    networks:
+      - microservices-network2
 
   phpmyadmin:
     image: phpmyadmin/phpmyadmin
@@ -77,6 +86,7 @@ services:
       - "8081:80"
     networks:
       - microservices-network2
+
 
 networks:
   microservices-network2:
